# isahc

./: .editorconfig  .gitignore  .gitmodules  AI_POLICY.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  INTERNALS.md  Justfile  LICENSE  Makefile  README.md  aliases.js  all.html  ayu.css  build.rs  crates.js  fn.delete.html  fn.delete_async.html  fn.get.html  fn.post.html  fn.put_async.html  fn.send.html  fn.send_async.html  help.html  index.html  main.js  release-plz.toml  run-segfault-integration-test-repeatedly.sh  rustdoc.css  rustfmt.toml  search-index.js  settings.html  shippable.yml  sidebar-items.js  source-files.js  src-files.js  struct.ResponseFuture.html  trait.ResponseExt.html
.circleci/: config.yml
.github/: FUNDING.yml  codecov.yml  dependabot.yml  labels.yml  main.workflow  publish.sh  release-drafter.yml
.github/workflows/: ci.yml  commands.yml  configure-repo.yml  coverage.yml  psl-update.yml  publish-docs.yml  release-management.yaml  release-plz.yml  release.yml  rust.yml  sponsors.yml  teto.yml
auth/: struct.Authentication.html
benches/: download.rs
benchmarks/: Cargo.toml
benchmarks/benches/: download.rs
benchmarks/src/: lib.rs
body/: struct.Body.html
client/: struct.HttpClientBuilder.html  struct.ResponseFuture.html
config/: enum.DnsCache.html  enum.RedirectPolicy.html  index.html  struct.PrivateKey.html  struct.ResolveMap.html  trait.Configurable.html
config/ssl/: struct.CaCertificate.html  struct.ClientCertificate.html  struct.SslOption.html
error/: enum.Error.html
examples/: async.rs  badssl.rs  client.rs  cookies.rs  default_headers.rs  head_length.rs  http2.rs  json.rs  logging.rs  multipart_form.rs  parallel_requests.rs  progress.rs  simple.rs  spurious_abort_logs.rs  ssl.rs  stream_cancellation.rs  tracing.rs  transport.rs  upload_file.rs  version.rs
implementors/isahc/: trait.RequestExt.js
isahc/: all.html  enum.Error.html  fn.delete.html  fn.delete_async.html  fn.get.html  fn.get_async.html  fn.head.html  fn.head_async.html  fn.is_http_version_supported.html  fn.post.html  fn.post_async.html  fn.put.html  fn.put_async.html  fn.send.html  fn.send_async.html  fn.version.html  index.html  sidebar-items.js  struct.AsyncBody.html  struct.Body.html  struct.HttpClient.html  struct.HttpClientBuilder.html  struct.Metrics.html  struct.Request.html  struct.Response.html  struct.ResponseFuture.html  struct.Trailer.html  trait.AsyncReadResponseExt.html  trait.ReadResponseExt.html  trait.RequestExt.html  trait.ResponseExt.html
isahc/auth/: index.html  sidebar-items.js  struct.Authentication.html  struct.Credentials.html
isahc/body/: struct.AsyncBody.html
isahc/client/: struct.HttpClient.html  struct.HttpClientBuilder.html  struct.ResponseFuture.html
isahc/config/: enum.DnsCache.html  enum.IpVersion.html  enum.RedirectPolicy.html  index.html  sidebar-items.js  struct.CaCertificate.html  struct.ClientCertificate.html  struct.Dialer.html  struct.DialerParseError.html  struct.ExpectContinue.html  struct.NetworkInterface.html  struct.PrivateKey.html  struct.ResolveMap.html  struct.SslOption.html  struct.VersionNegotiation.html  trait.Configurable.html
isahc/cookies/: enum.CookieRejectedErrorKind.html  index.html  sidebar-items.js  struct.Cookie.html  struct.CookieBuilder.html  struct.CookieJar.html  struct.CookieRejectedError.html  struct.ParseError.html
isahc/error/: enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html
isahc/info/: fn.is_http_version_supported.html  fn.version.html
isahc/metrics/: struct.Metrics.html
isahc/net/: index.html  sidebar-items.js
isahc/prelude/: index.html  sidebar-items.js  struct.Body.html  struct.HttpClient.html  struct.Response.html  trait.RequestExt.html  trait.ResponseExt.html
isahc/request/: trait.RequestExt.html
isahc/response/: trait.AsyncReadResponseExt.html  trait.ReadResponseExt.html  trait.ResponseExt.html
isahc/tls/: enum.ProtocolVersion.html  index.html  sidebar-items.js  struct.Certificate.html  struct.Identity.html  struct.PrivateKey.html  struct.TlsConfig.html  struct.TlsConfigBuilder.html  struct.TrustStore.html
isahc/trailer/: struct.Trailer.html
metrics/: struct.Metrics.html
prelude/: struct.HttpClient.html  struct.Request.html
request/: trait.RequestExt.html
search.index/: 009a81b4e4.js  02c7dbd20b.js  049cf83152.js  07127509ad.js  08cbc8948a.js  090b875eb6.js  0c1a94e5e2.js  0dc24aca00.js  0f2d06fb75.js  10e373ae4e.js  176762982b.js  1805e67dfa.js  18a9fab308.js  1a03834522.js  1b99d0731b.js  1c5ac2f0a6.js  1e97cfa639.js  1fa521c688.js  2042c657ed.js  2084ab4f5f.js  221f5d88f4.js  2294dc4736.js  25b752d8a6.js  286da3480f.js  29b7d3d28e.js  2a6d49f599.js  2c544d00e4.js  2de9f04313.js  2e105410af.js  2e7071a9af.js  2eb029914d.js  2f03633887.js  2f21423329.js  2fe9fb88a3.js  325269ed0b.js  346c7b869c.js  36557cc759.js  376320a97c.js  38e7fb792a.js  3a5412c16a.js  (+46 more)
search.index/crateNames/: 4dc5492941.js
search.index/desc/: 3f022bd627.js  c5af9b2164.js  db71bbefe2.js
search.index/entry/: 3e447f94e7.js  47ee161254.js  57d87caaeb.js
search.index/function/: 223f57cb0c.js  6aaade3a02.js  a696529dc3.js
search.index/generic_inverted_index/: 1bcaf8d647.js  850b2adf8c.js  859ed280a0.js
search.index/name/: 2615ff59e2.js  (+2 more)
src/: agent.rs  auth.rs  body.rs  buffer.rs  client.rs  config.rs  cookies.rs  curlext.rs  default_headers.rs  error.rs  handler.rs  headers.rs  info.rs  interceptors.rs  internal.rs  io.rs  lib.rs  log.rs  macros.rs  metrics.rs  middleware.rs  multipart.rs  options.rs  parse.rs  parsing.rs  redirect.rs  request.rs  response.rs  stat.rs  stream.rs  task.rs  text.rs  tls.rs  trailer.rs  transfer.rs  transport.rs  util.rs  wakers.rs
test-util/: Cargo.toml
tests/: auth.rs  cookies.rs  encoding.rs  expect.rs  headers.rs  interceptors.rs  json.rs  methods.rs  metrics.rs  net.rs  proxy.rs  redirects.rs  request_body.rs  response.rs  response_body.rs  segfault.rs  status.rs  timeouts.rs  tls.rs  unix.rs  unix_socket_response.http  version.rs
testserver/: Cargo.toml
testutil/: Cargo.toml
utilities/: Cargo.toml
(+230 files in other folders)
