[package]
name = "isahc"
version = "1.8.1"
description = "The practical HTTP client that is fun to use."
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"
keywords = ["http", "request", "client", "async", "curl"]
categories = ["web-programming::http-client"]
repository = "https://github.com/sagebind/isahc"
documentation = "https://docs.rs/isahc/"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
exclude = [".*", "benchmarks", "media"]

[package.metadata.docs.rs]
features = ["cookies", "json", "nightly"]

[badges.maintenance]
status = "passively-maintained"

[features]
default = ["default-tls", "http2", "static-curl", "text-decoding"]
cookies = ["httpdate"]
http2 = ["curl/http2"]
json = ["serde", "serde_json"]
nightly = []
psl = ["httpdate", "dep:psl", "dep:publicsuffix"]
spnego = ["curl-sys/spnego"]
static-curl = ["curl/static-curl"]
static-ssl = ["curl/static-ssl"]
text-decoding = ["encoding_rs", "mime"]
unstable-interceptors = []

# TLS-related features
tls = []
tls-insecure = []
default-tls = ["rustls-tls-native-certs"]
native-tls = ["tls", "curl/ssl", "curl-sys/ssl"]
native-tls-static = ["native-tls", "curl/static-ssl", "curl-sys/static-ssl"]
rustls-tls = ["static-curl", "tls", "curl/rustls"]
rustls-tls-native-certs = ["rustls-tls", "data-encoding", "rustls-native-certs"]

[dependencies]
async-channel = ">=1.4.2, <3"
castaway = "0.2"
crossbeam-utils = ">=0.7.0, <0.9.0"
event-listener = "5"
futures-lite = ">=1.10.1, <3"
http = ">=0.2.1, <2"
log = "0.4"
polling = "3"
slab = "0.4"
sluice = "0.6"
url = "2.1"
waker-fn = "1"

[dependencies.curl]
version = "0.4.43"
default-features = false

[dependencies.curl-sys]
version = "0.4.55"
default-features = false

[dependencies.data-encoding]
version = "2"
optional = true

[dependencies.encoding_rs]
version = "0.8"
optional = true

[dependencies.httpdate]
version = "1"
optional = true

[dependencies.mime]
version = "0.3"
optional = true

# Provides a precompiled copy of the PSL
[dependencies.psl]
version = "2"
optional = true

# Provides runtime parsing of the PSL
[dependencies.publicsuffix]
version = "2"
features = ["std"]
optional = true

[dependencies.rustls-ffi]
version = "0.15"
optional = true

[dependencies.rustls-native-certs]
version = "0.8"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.tracing]
version = "0.1.17"
features = ["log"]

[dependencies.tracing-futures]
version = "0.2"
default-features = false
features = ["std", "std-future"]

[dev-dependencies]
clap.version = "4"
clap.features = ["derive"]
env_logger = "0.11"
flate2 = "1"
indicatif = "0.15"
quickcheck = "1"
quickcheck_macros = "1"
rayon = "1"
regex = "1"
static_assertions = "1"
tempfile = "3"
test-case = "3"
tracing-subscriber = ">=0.2.12, <0.4"
serde_json = "1"

[dev-dependencies.testserver]
path = "testserver"

[[example]]
name = "cookies"
required-features = ["cookies"]

[[example]]
name = "json"
required-features = ["json", "serde/derive"]

[workspace]
members = ["benchmarks", "testserver"]
