[package]
name = "isahc-benchmarks"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
criterion = "0.3"
curl = { git = "https://github.com/alexcrichton/curl-rust", branch = "main" }
rayon = "1"
rouille = "3"

[dependencies.isahc]
path = ".."

[[bench]]
name = "download"
harness = false
