[package]
name = "isahc-benchmarks"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
criterion = "0.3"
curl = "0.4.42"
rayon = "1"
rouille = "3"
reqwest = { version = "0.11.10", features = ["blocking"] }

[dependencies.isahc]
path = ".."

[[bench]]
name = "download"
harness = false
